Fix mobile view overflow

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -36,18 +36,11 @@ body {
   width: 5px;
 }
 
-/* Track */
 .scroll::-webkit-scrollbar-track {
   background: #eae2e3;
 }
 
-/* Handle */
 .scroll::-webkit-scrollbar-thumb {
     background: #888;
       border-radius: 5px;
-}
-
-/* Handle on hover */
-.scroll::-webkit-scrollbar-thumb:hover {
-  background: #555;
 }
